fix gap spacing and bolded president and club name in contact page

--- a/pages/Home/home.css
+++ b/pages/Home/home.css
@@ -14,6 +14,7 @@ p a.link {
     background-color: #16192b;
     display: inline-block;
     border-radius: 25px;
+    margin-top: 5px;
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 5px;
